input output processing

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Translate to Banana!</h1>
-    <button class="clickMe">
-        Click me
+    <textarea id="englishInput" placeholder= "put your sentences here and we will convert it to english"></textarea>
+    <button id="btn-translate">
+        Translate
     </button>
     
+    <textarea id="bananaOutput"></textarea>
     <script src="myScript.js"></script>
 </body>
 </html>
