input output processing done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         Translate
     </button>
     
-    <textarea id="bananaOutput"></textarea>
+    <div style="margin:1rem; font-size: larger;">output will come here👇</div>
+    <div id="bananaOutput"></div>
+    
     <script src="myScript.js"></script>
 </body>
 </html>
