fix- translate btn not working

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Translate to Banana!</h1>
-    <textarea id="englishInput" placeholder= "put your sentences here and we will convert it to english"></textarea>
+    <textarea id="englishInput" placeholder= "put your message here which you want to convert to banana language"></textarea>
     <button id="btn-translate">
-        Translate
+        Translate To Banana
     </button>
     
     <div style="margin:1rem; font-size: larger;">output will come here👇</div>
