--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Speak</title>
+    <title>Banana Talk</title>
     <link rel="stylesheet" href="myStyle.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <h1>Translate to Banana!</h1>
-    <textarea id="englishInput" placeholder= "put your message here which you want to convert to banana language"></textarea>
+    <div id=page-container>
+    <div id=content-wrap>
+    <h1>Banana Talk!</h1>
+    <textarea id="englishInput" placeholder= "put your message here which you want to convert to banana language" ></textarea>
     <button id="btn-translate">
         Translate To Banana
     </button>
     
-    <div style="margin:1rem; font-size: larger;">output will come here👇</div>
+    <div style="margin:1rem; font-size: 1.5rem; text-align:center; ">Translation will come here👇</div>
     <div id="bananaOutput"></div>
-    
+    </div>
+    <footer id="footer">
+        <div style="font-size: xx-large; margin-top:1.5rem;">About</div>
+        <p>
+        Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.
+        </p>
+    </footer>
+    </div>
     <script src="myScript.js"></script>
 </body>
 </html>
