--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Talk</title>
+    <title>Pirate Talk</title>
     <link rel="stylesheet" href="myStyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet"> 
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet"> 
 <body>
     <div id=page-container>
     <div id=content-wrap>
-    <h1>Banana Talk!</h1>
-    <textarea id="englishInput" placeholder= "put your message here which you want to convert to banana language" ></textarea>
+    <h1> Pirate Talk!<img id="pirate" src="pirate.svg"></h1>
+    <textarea id="englishInput" placeholder= "put your message here which you want to convert to pirate language" ></textarea>
     <button id="btn-translate">
-        Translate To Banana
+        Translate
     </button>
     
     <div style="margin:1rem; font-size: 1.5rem; text-align:center; ">Translation will come here👇</div>
     <div id="bananaOutput"></div>
     </div>
     <footer id="footer">
-        <div style="font-size: xx-large; margin-top:1.5rem;">About</div>
+       
+        <div style="font-size: xx-large; margin-top:1.5rem;"><img id="wheel" src="wheel.svg">About</div>
         <p>
-        Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.
+            Convert from English to Pirate speak. Shiver me timbers! I be needin' t' send 'em all to Davy Jones' locker. Arrrrr! Anyway go ahead and translate and have some fun! 
         </p>
     </footer>
     </div>
