change title to CoviScan

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate Talk</title>
+    <title>CoviScan</title>
     <link rel="stylesheet" href="myStyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet"> 
 <body>
     <div id=page-container>
     <div id=content-wrap>
-    <h1> Pirate Talk!<img id="pirate" src="pirate.svg"></h1>
+    <h1> CoviScan<img id="pirate" src="pirate.svg"></h1>
     <textarea id="englishInput" placeholder= "put your message here which you want to convert to pirate language" ></textarea>
     <button id="btn-translate">
         Translate
