--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id=page-container>
     <div id=content-wrap>
-    <h1> CoviScan<img id="pirate" src="pirate.svg"></h1>
+    <h1> CoviScan<img id="coviscanLogo" src="coviscanLogo.png"></h1>
     <textarea id="englishInput" placeholder= "put your message here which you want to convert to pirate language" ></textarea>
     <button id="btn-translate">
         Translate
