--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>CoviScan</title>
     <link rel="stylesheet" href="myStyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 <body>
     <div id=page-container>
     <div id=content-wrap>
@@ -21,9 +25,9 @@
     </div>
     <footer id="footer">
        
-        <div style="font-size: xx-large; margin-top:1.5rem;"><img id="wheel" src="wheel.svg">About</div>
+        <div style="font-size: xx-large; margin-top:1.5rem;">About</div>
         <p>
-            Convert from English to Pirate speak. Shiver me timbers! I be needin' t' send 'em all to Davy Jones' locker. Arrrrr! Anyway go ahead and translate and have some fun! 
+            COVID-19 Detection Using X-Rays 
         </p>
     </footer>
     </div>
