--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate Talk</title>
+    <title>CoviScan</title>
     <link rel="stylesheet" href="myStyle.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet"> 
-<body>
-    <div id=page-container>
-    <div id=content-wrap>
-    <h1> Pirate Talk!<img id="pirate" src="pirate.svg"></h1>
-    <textarea id="englishInput" placeholder= "put your message here which you want to convert to pirate language" ></textarea>
-    <button id="btn-translate">
-        Translate
-    </button>
     
-    <div style="margin:1rem; font-size: 1.5rem; text-align:center; ">Translation will come here👇</div>
-    <div id="bananaOutput"></div>
-    </div>
+<body>
+    <h1> CoviScan<img id="coviscanLogo" src="coviscanLogo.png"></h1>
+    <div id="form_content">
+        <form method="POST" action="https://covid19-detection-api.herokuapp.com/api/image" enctype="multipart/form-data"> 
+            <input type="text" name="name" placeholder = "Enter your name" id="input_name">
+            <input type="file" name="image" id="input_image" required><br> 
+            <button id="form-button">Upload and Predict</button> 
+        </form>
+    </div> 
+   
+    <div id="result-div"></div>
+
     <footer id="footer">
        
-        <div style="font-size: xx-large; margin-top:1.5rem;"><img id="wheel" src="wheel.svg">About</div>
+        <div style="font-size: xx-large; margin-top:1.5rem;">About</div>
         <p>
-            Convert from English to Pirate speak. Shiver me timbers! I be needin' t' send 'em all to Davy Jones' locker. Arrrrr! Anyway go ahead and translate and have some fun! 
+            COVID-19 Detection Using X-Rays 
         </p>
     </footer>
     </div>
